@@ -8,6 +8,7 @@ import java.util.Set;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PutMapping;
@@ -170,11 +171,16 @@ public class JediControleur {
 	/**
 	 * supprimer jedi
 	 */
-	@GetMapping("/deluser/{delId}")
+	@DeleteMapping("/deluser/{delId}")
     public ResponseEntity<?> delUser(@PathVariable String delId) {
-        jediRepo.deleteById(new Long(delId));
-        return ResponseEntity.status(HttpStatus.CREATED).body(null);
-
+        List<Jedi> listJedi = null;
+        jediRepo.deleteById(Long.valueOf(delId));
+        try {
+            listJedi = jediRepo.findAll();
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(null);
+        }
+        return ResponseEntity.status(HttpStatus.OK).body(listJedi);
     }
 	
 	
